2009-03-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Make getMinimum lazy.
	* src/dummy.cc: Precompute result in constructor.
	* src/ipopt.cc: Make getMinimum lazy.
	* src/solver.cc: Initialize all fields in constructor.
	* src/solver.hh: Add NoSolution as a possibility in result.

2009-03-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Optimize arguments copy.
	* TODO: Update item.
	* src/ipopt.cc: Use memcpy to copy data.

2009-03-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Back to object oriented.
	* src/Makefile.am: Add library.
	* src/dummy.cc: Rename from src/dummy.hh.
	* src/ipopt.cc: Rename from src/ipopt.hh.
	* src/optimization-fwd.hh: Remove template.
	* src/solver.cc: Rename from src/solver.hxx.
	* src/solver.hh: Fix header to get function arity at run-time.
	* tests/Makefile.am: Link to liboptimization.
	* tests/ipopt.cc,
	* tests/simple-test.cc: Use the untemplated interface.

2009-03-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Really call objective function in Ipopt.
	* TODO: Add items.
	* src/ipopt.hh: Call objective function.

2009-03-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Moving to uBLAS vector for function arguments.
	* src/dummy.hh,
	* src/ipopt.hh: Use new template parameters of Solve class.
	* src/optimization-fwd.hh: Add fwd declaration with default data type.
	* src/solver.hh: Use uBLAS bounded vector.
	* src/solver.hxx: Use uBLAS vector, fix getArity.
	* tests/ipopt.cc: Use new interface.
	* tests/ipopt.stdout: Update test output.
	* tests/simple-test.cc: Use new interace.

2009-03-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Enhance Ipopt bridge.
	* src/ipopt.hh: Put MyTNLP out of IpoptSolver.
	* src/optimization-fwd.hh: Declare IpoptSolver.
	* src/solver.hh: Change attributes to protected.

2009-03-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Detect function arity at compile-time.
	* src/ipopt.hh: Set arity in get_nlp_info.
	* src/solver.hh,
	* src/solver.hxx: Detect arity and add getArity method.